# docs-rag-ai

./: .gitignore  AGENTS.md  AI_COMMIT_HOOK.md  README.md  docker-compose.yml
.githooks/: commit-msg
.github/: PULL_REQUEST_TEMPLATE.md
AI/: CONTEXT.md  CURRENT_TASK.md  FILE_MAP.md  RULES.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: routes.py  schemas.py
backend/app/core/: config.py
backend/app/services/: __init__.py  document_processor.py  document_service.py  rag_chain.py  vector_store.py
backend/data/: documents.json
backend/tests/: test_document_processor.py  test_vector_store.py
frontend/: package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatPanel.tsx  DocumentPanel.tsx  Header.tsx
frontend/src/lib/: api.ts  types.ts
