[project]
name = "docs-rag-backend"
version = "1.0.0"
description = "RAG backend powered by FastAPI, LangChain, FAISS, and OpenAI"
requires-python = ">=3.11"
dependencies = [
    # ── Web Framework ──────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    # ── LangChain & AI ─────────────────────────
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    # ── Vector Store ───────────────────────────
    "faiss-cpu>=1.9.0",
    # ── Document Loaders ───────────────────────
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    # ── Configuration ──────────────────────────
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py311"
line-length = 100
